--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         <activity android:name=".activity.ForgetCodeActivity"></activity>
         <activity android:name=".activity.SendSuccessActivity"></activity>
         <activity android:name=".activity.CreateDiaryActivity"></activity>
+        <activity android:name=".activity.EditDiaryActivity"></activity>
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
