--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,12 @@
         <activity android:name=".activity.EditDiaryActivity"></activity>
         <activity android:name=".activity.ViewDiaryActivity"></activity>
         <activity android:name=".activity.SettingActivity"></activity>
+
+        <receiver android:name=".service.Receiver" android:exported="false" />
     </application>
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 </manifest>
